--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -582,9 +582,13 @@ The calendar's display then switches to December 2019 and the engagement list wi
 
 This command does not work if the application is in another tab or the specified date is invalid.
 
-.Engagement list for 01/11/2019
+.Calendar view for November 2019
+image::calendar-view-modified.png[width="450", float="left"]
+[.left]
+.Engagement list for 29/10/2019 (circled date)
 image::calendar-open-display.png[width="450"]
 {empty} +
+
 The above calendar window opens up after entering `calendar c/opendisplay d/29/10/2019` into the input box while in the
 calendar view for November 2019. This does not change the display to October 2019 because 29/10/2019 is displayed in
 the calendar view for November 2019, albeit at the top left corner.
@@ -610,6 +614,7 @@ image::calendar-view.png[width="450", float="left"]
 .Calendar view after `nextmonth` command
 image::calendar-next-month.png[width="450"]
 {empty} +
+
 Alternatively, you may click on the blue button with the right arrow next to the calendar's month title
 to change the display to the next month. The button will not work if the calendar is displaying December 9999.
 
@@ -627,6 +632,7 @@ image::calendar-view.png[width="450", float="left"]
 .Calendar view after `previousmonth` command
 image::calendar-previous-month.png[width="450"]
 {empty} +
+
 Alternatively, you may click on the blue button with the left arrow next to the calendar's month title
 to change the display to the previous month. The button will not work if the calendar is displaying January 0001.
 
